<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_eight"
        android:background="@color/semiTransparent"
        android:padding="@dimen/margin_five">

        <ImageView
            android:id="@+id/iv_hero_image"
            android:layout_width="@dimen/hero_image_size"
            android:layout_height="@dimen/hero_image_size"
            android:contentDescription="@string/hero_image_content_description"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_hero_name"
            style="@android:style/TextAppearance.Holo.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_sixteen"
            android:layout_toEndOf="@id/iv_hero_image"
            android:hint="@string/hero_name_hint"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_hero_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_hero_name"
            android:layout_marginStart="@dimen/margin_sixteen"
            android:layout_toEndOf="@id/iv_hero_image"
            android:hint="@string/hero_description_hint" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/margin_five"
        android:layout_marginEnd="@dimen/margin_five">

        <Button
            android:id="@+id/btn_detail"
            android:layout_width="@dimen/margin_zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detail_button"
            android:textAllCaps="true"
            android:background="@drawable/hero_button_selector"/>

        <Button
            android:id="@+id/btn_wiki"
            android:layout_width="@dimen/margin_zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wiki_button"
            android:textAllCaps="true"
            android:background="@drawable/hero_button_selector"
            android:layout_marginStart="@dimen/margin_five"/>

        <Button
            android:id="@+id/btn_comics"
            android:layout_width="@dimen/margin_zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/comics_button"
            android:textAllCaps="true"
            android:background="@drawable/hero_button_selector"
            android:layout_marginStart="@dimen/margin_five"/>

    </LinearLayout>

</LinearLayout>

